prevent machine secret hidden when overflow

--- a/perffarm/static/css/machine.css
+++ b/perffarm/static/css/machine.css
@@ -36,3 +36,10 @@ input:checked + label {
 #tab4:checked ~ #content4 {
     display: block;
 }
+
+.machine_secret{
+    white-space: normal;
+    overflow: visible;
+    text-overflow: unset;
+    word-break: break-all;
+}
